Using SDFs, Experiment 2 Updates

--- a/refinecbf_ros/config/Jackal/Experiment2/env.yaml
+++ b/refinecbf_ros/config/Jackal/Experiment2/env.yaml
@@ -16,27 +16,43 @@ obstacles:
       - 0
       - 1
     minVal:
-      - -2.0
-      - 1.0
+      - 3.8
+      - 0
     maxVal:
-      - -1.0
-      - 2.0
-    padding: .2
+      - 4.8
+      - 0.5
+    padding: .7
 
-  # obstacle3:
+  obstacle2:
+    type: 'Rectangle'
+    mode: 'Update'
+    indices:
+      - 0
+      - 1
+    minVal:
+      - 3.8
+      - -1.7
+    maxVal:
+      - 4.8
+      - 0.0
+    padding: .7
+    updatetime: 5
+
+  # obstacle2:
   #   type: 'Rectangle'
-  #   mode: 'Update'
+  #   mode: 'Detection'
   #   indices:
   #     - 0
   #     - 1
   #   minVal:
-  #     - 1.0
-  #     - -2.0
+  #     - 3.8
+  #     - -1.7
   #   maxVal:
-  #     - 2.0
-  #     - -1.0
-  #   padding: .2
-  #   updatetime: 5
+  #     - 4.8
+  #     - 0.0
+  #   padding: .7
+  #   detectionRadius: 2
+
 
 
 boundary:
@@ -45,22 +61,22 @@ boundary:
     - 0
     - 1
   minVal:
-    - -8.0
-    - -8.0
+    - -0.5
+    - -2.0
   maxVal:
-    - 8.0
-    - 8.0
+    - 6.5
+    - 2.5
 
 obstacle_update_rate_hz: 5
 
 state_domain:
   lo: 
-    - -10.0
-    - -10.0
+    - -0.5
+    - -2.0
     - -3.1416
   hi: 
-    - 10.0
-    - 10.0
+    - 6.5
+    - 2.5
     - 3.1416
   resolution:
     - 45
@@ -72,7 +88,7 @@ control_space:
   n_dims: 2
   lo:
     - -1.0
-    - 0.05
+    - 0.1
   hi: 
     - 1.0
     - 0.5
